syntax = "proto3";
package gRPCDemo;
service gRPC {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc ServerStreaming (HelloRequest) returns (stream HelloReply) {}

  rpc ClientStreaming (stream HelloRequest) returns (HelloReply) {}

  rpc BidirectionalStreaming (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}